# POC-Rust-Axum-Backend

./: .gitignore  Cargo.toml
migrations/: 20240405190402_init.up.sql  20240519234355_User_Table.up.sql
src/: auth.rs  main.rs  user.rs
src/lib/: http_error.rs  mod.rs  repository.rs
src/todo/: handlers.rs  mod.rs  model.rs  repository.rs
