cargo-features = ["edition2024"]
[package]
name = "backend"
version = "0.1.0"
edition = "2024" 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = {version = "0.5.2", features = ["trace"]}

proc-macro2 = "=1.0.79"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
redis = { version = "0.25.3", features = [ "tokio-comp"]}
argon2 = "0.5.3"
rand = "0.8.5"
serde-email = "3.0.1"
